--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,30 @@
   width: 220px;
   font-size: 18px;
   font-weight: 400;
-  color: rgba(80, 80, 80, 1);
+  color: #1F2937;
   text-align: center;
+}
+
+
+/* Styles for Testimony section */
+.testimony {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0px 400px;
+}
+
+.testimony > .quote {
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1F2937;
+}
+
+.testimony > .quote-source {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 24px;
+  font-weight: 700;
+  color: #1F2937;
 }
