Update header styles to match requirements
Change button element to use <button> tag instead of <a> anchor tag. Add margin to give it some space to separate it from the text. Disable button's default border.
< iteration#1 Complete >

--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,11 @@
 .header .sign-up {
   color: white;
   background-color: #3882F6;
-  border-radius: 4px 8px;
+  border: none;
+  font-size: 18px;
+  border-radius: 16px;
   padding: 16px 64px;
+  margin-top: 16px;
   font-weight: 900;
 }
 
